Getting Ready to Deploy

--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,34 @@
     </dependencies>
     <build>
         <plugins>
+        	<plugin>
+        		<groupId>org.codehaus.mojo</groupId>
+        		<artifactId>appassembler-maven-plugin</artifactId>
+        		<version>1.1.1</version>
+        		<configuration>
+        			<assembleDirectory>target</assembleDirectory>
+        			<programs>
+        			<program>
+        				<mainClass>com.develogical.WebServer</mainClass>
+        				<name>simplewebapp</name>
+        			</program>
+        			</programs>
+        		</configuration>
+        		<executions>
+        			<execution>
+        				<phase>package</phase>
+        				<goals>
+        					<goal>assemble</goal>
+        				</goals>
+        			</execution>
+        		</executions>
+        	</plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.3</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
